some refactoring and removing an extra unuseful code