@@ -4,6 +4,7 @@ import com.example.khaier.dto.request.PostRequestDto;
 import com.example.khaier.dto.response.PostResponseDto;
 import com.example.khaier.entity.post.Post;
 import com.example.khaier.entity.user.User;
+import com.example.khaier.helper.PostHelper;
 import com.example.khaier.helper.UserHelper;
 import com.example.khaier.mapper.PostRequestDtoToPostMapper;
 import com.example.khaier.mapper.PostToPostResponseDtoMapper;
@@ -12,13 +13,7 @@ import com.example.khaier.service.PostService;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import org.springframework.web.multipart.MultipartFile;
-import org.webjars.NotFoundException;
-
-import java.io.IOException;
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,10 +24,11 @@ public class PostServiceImpl implements PostService {
     private final PostRequestDtoToPostMapper requestDtoToPostMapper;
     private final PostToPostResponseDtoMapper postToPostResponseDtoMapper;
     private final UserHelper userHelper;
+    private final PostHelper postHelper;
     @Override
     public List<PostResponseDto> getAllPosts(Long userId) {
         List<Post> posts = postRepository.findAll();
-        return posts.stream().map(post->postToPostResponseDtoMapper.apply(post,userId)).collect(Collectors.toList());
+        return posts.stream().map(post->postToPostResponseDtoMapper.apply(post,userId)).toList();
     }
 
     @Override
@@ -46,9 +42,7 @@ public class PostServiceImpl implements PostService {
 
     @Override
     public PostResponseDto getPostById(Long postId,Long userId) {
-        Post post =postRepository.findById(postId).orElseThrow(
-                ()->new NotFoundException("Post with id : "+postId+" not found!")
-        );
+        Post post =postHelper.checkPostExistOrThrowException(postId);
         return postToPostResponseDtoMapper.apply(post,userId);
     }
 }
